Fix height on safari

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
 .image_link {
 	display: flex;
 	justify-content: center;
+	align-items: flex-start;
 }
 
 .certificate {
